# wolf3d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  arguments  arguments.txt  author  checksum.sh  install_libs.sh  run.sh  wolf_config.wolf  wolf_ignore.wolf
SDL2/lib/: libSDL-1.2.0.dylib  libSDL2-2.0.0.dylib  libSDL_image-1.2.0.dylib  libSDL_mixer-1.2.0.dylib  libSDL_ttf-2.0.0.dylib
SDL2/lib/cmake/SDL2/: sdl2-config.cmake
SDL2/lib/pkgconfig/: sdl2.pc
SDL2_libs/SDL2/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake
SDL2_libs/SDL2/lib/: libSDL2-2.0.0.dylib  libSDL2.la  libSDL2main.la  nm_output.txt
SDL2_libs/SDL2/lib/pkgconfig/: sdl2.pc
SDL2_libs/SDL2/src/: SDL_internal.h
SDL2_libs/SDL_ttf/: Makefile  SDL2_ttf.pc  config.status  glfont  libSDL2_ttf.la  libtool  showfont
SDL2_libs/SDL_ttf/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
SDL2_libs/SDL_ttf/.libs/: glfont  libSDL2_ttf.lai  showfont
SDL2_libs/SDL_ttf/lib/: libSDL2_ttf-2.0.0.dylib
assets/def_mine/: pack.txt
includes/: colors.h  defines.h  errors.h  key_codes.h  sdb_image.h  structs.h  term_defines.h  wolf3d.h
libft/: Makefile
libft/ft_printf/: Makefile
libft/ft_printf/includes/: error.h  ft_printf.h  ft_types.h  structs.h
libft/ft_printf/srcs/: error.c  fields_check.c  floats.c  format_filler.c  format_filler_utils.c  format_parser.c  ft_printf.c  int.c  split_flags.c  string.c
libft/includes/: get_next_line.h  libft.h
libft/src_atoi_itoa/: ft_atoi.c  ft_atoll.c  ft_atoll_base.c  ft_atoull.c  ft_itoa.c  ft_lltoa.c  ft_lltoa_base.c  ft_ulltoa.c  ft_ulltoa_base.c
libft/src_list/: ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/src_math/: ft_abs.c  ft_power.c  ft_swap.c  is_even.c
libft/src_memory/: clean_chr_mtrx.c  ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/src_put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/src_string/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strlen_char.c  ft_strljoin.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  get_next_line.c
libft/src_utils/: ft_count_digits.c  ft_count_digits_base.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c
maps/: map1  map2  map3  map4  map5  map6  map7
sources/: wolf3d.c
sources/SDL_utils/: SDL_clean.c  sdl_clean.c  sdl_loop.c
sources/debug/: debug.c
sources/game_logic/: game_logic_utils.c  parse_items.c  player_actions.c
sources/hooks/: key_hook.c  menu_interactions.c  mouse_hook.c  player_actions.c  player_look.c  player_moves.c
sources/image_parsing/: image_parser.c
sources/init/: init.c  parse_params.c  sdl_init.c
sources/parsing/: fast_gnl.c  image_parser.c  map_parser.c  parsing_utils.c  sprites_parser.c  sprites_parsing.c  texture_parser.c  texture_parsing_utils.c  texture_table_parser.c  texture_table_parsing.c  wolf_gnl.c
sources/render/: bresenham.c  controls_window.c  enemy.c  game_logic_utils.c  game_window.c  items.c  main_menu.c  map_choose_menu.c  minimap.c  minimap_utils.c  render.c  render_utils.c  rotation.c  sprite_getter.c  terminal_render.c  texture_render_utils.c
sources/terminal/: init_terminal.c  term_actions.c  term_actions2.c  term_command_parser.c  term_init.c  term_processing.c  term_render.c  terminal_render.c
sources/utils/: binary_search.c  error.c  exit.c
